examples/platformApps/gcpHelloWorld/k8s/helloWorld-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hexa-helloworld
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
  labels:
    app: hexa-helloworld
    tier: frontend
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: hexa-helloworld
    tier: frontend
